examples/OpenShift/deployment-s2i-webcalculator.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: s2i-webcalculator
  namespace: futile-tests
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s2i-webcalculator
  template:
    metadata:
      labels:
        app: s2i-webcalculator
    spec:
      containers:
        - name: container
          image: 'image-registry.openshift-image-registry.svc:5000/futile-tests/s2i-webcalculator'
          ports:
            - containerPort: 80
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: full-perm-account
      serviceAccount: full-perm-account
      securityContext: {}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: service-s2i-webcalculator
  namespace: futile-tests
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: s2i-webcalculator
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: route-s2i-webcalculator
  namespace: futile-tests
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: route-s2i-webcalculator.apps-crc.testing
  to:
    kind: Service
    name: service-s2i-webcalculator
    weight: 100
  port:
    targetPort: 80
  wildcardPolicy: None
